@@ -1,5 +1,9 @@
 v0.3.4 - Unpublished development build
 - XML files are formatted (includes.xml, auto-generated playlists)
+- New 'Settings' available shortcut grouping
+- Ability to override available shortcuts type
+- A couple of small fixes and improvements
+- Fix: Work around XBMC translating numering labelID's to their localised string, causing sub-menus not to show
 
 v0.3.3
 - Available shortcuts in management dialog improvements:
